[package]
name = "cncd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cncd"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
async-stream = "0.3.3"
tokio-serial = "5.4.4"
libmdns = "0.7"